cfix: GroupchatRoster: Fix roster margins for scrollbar
Fix for e266a44790ca07e598b5f559dfe5dab4338d67d0
Margins have to be set using GTK properties, since using GTK's CSS
doesn't seem to have the same effect on treeviews.

--- a/gajim/data/style/gajim.css
+++ b/gajim/data/style/gajim.css
@@ -988,10 +988,6 @@ popover.combo scrollbar.vertical {
 .start-chat-row:not(.activatable) label { color: @insensitive_fg_color; }
 .start-chat-row:focus { outline: none; }
 
-/* GroupChatRoster */
-.groupchat-roster treeview { padding-left: 4px; }
-.groupchat-roster { padding: 0 18px 0 18px; }
-
 /* GroupchatConfig */
 #GroupchatConfig stack { border-bottom: 1px solid; border-color: @borders;}
 #GroupchatConfig stacksidebar > scrolledwindow {
